@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020170303"
-#define public MagickPackageReleaseDate "snapshot-20170303"
+#define public MagickPackageVersionAddendum ".020170304"
+#define public MagickPackageReleaseDate "snapshot-20170304"
